updating environment variables

--- a/.github/workflows/deploy-lambda.yaml
+++ b/.github/workflows/deploy-lambda.yaml
@@ -18,4 +18,4 @@ jobs:
           terraform init
           terraform apply -auto-approve
         env:
-          TF_VAR_gitlab_token: ${{ secrets.GITLAB_TOKEN }}
+          TF_VAR_gitlab_token: ${{ secrets.GIT_PAT }}
