updating biweekly release to use API calls

--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -1,35 +1,22 @@
-name: Deploy Lambda
+stages:
+  - deploy
 
-on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:
+deploy_lambda:
+  stage: deploy
+  image: hashicorp/terraform:1.8
+  script:
+    - cd infra/terraform
+    - terraform init -input=false
+    - terraform apply -auto-approve -input=false
+  variables:
+    # --- AWS credentials for Terraform ---
+    AWS_ACCESS_KEY_ID: "$AWS_ACCESS_KEY_ID"
+    AWS_SECRET_ACCESS_KEY: "$AWS_SECRET_ACCESS_KEY"
+    AWS_DEFAULT_REGION: "$AWS_DEFAULT_REGION"
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.8.0
-
-      - name: Initialize and Apply Terraform
-        run: |
-          cd infra/terraform
-          terraform init -input=false
-          terraform apply -auto-approve -input=false
-        env:
-          # --- AWS credentials for Terraform ---
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-
-          # --- Terraform input variables (become Lambda env vars) ---
-          TF_VAR_git_pat: ${{ secrets.GIT_PAT }}
-          TF_VAR_git_remote_url: ${{ secrets.GIT_REMOTE_URL }}
-          TF_VAR_api_base: ${{ secrets.API_BASE }}
-
+    # --- Terraform variables passed into Lambda ---
+    TF_VAR_git_pat: "$GIT_PAT"
+    TF_VAR_git_remote_url: "$GIT_REMOTE_URL"
+    TF_VAR_api_base: "$API_BASE"
+  only:
+    - main
