--- a/.github/workflows/deploy-lambda.yaml
+++ b/.github/workflows/deploy-lambda.yaml
@@ -9,13 +9,27 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: hashicorp/setup-terraform@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.8.0
-      - run: |
+
+      - name: Initialize and Apply Terraform
+        run: |
           cd infra/terraform
-          terraform init
-          terraform apply -auto-approve
+          terraform init -input=false
+          terraform apply -auto-approve -input=false
         env:
-          TF_VAR_gitlab_token: ${{ secrets.GIT_PAT }}
+          # --- AWS credentials for Terraform ---
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+
+          # --- Terraform input variables (become Lambda env vars) ---
+          TF_VAR_github_pat: ${{ secrets.GIT_PAT }}
+          TF_VAR_git_remote_url: ${{ secrets.GIT_REMOTE_URL }}
+          TF_VAR_api_base: ${{ secrets.API_BASE }}
+
